# library-mgmt-system-API

./: .gitignore  pyproject.toml  start_server.py
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py  utils.py
app/core/: auth.py  config.py  database.py  middleware.py
app/routers/: books.py  users.py
app/schemas/: book.py  user.py
app/tests/: conftest.py  test_books_endpoints.py  test_books_router.py  test_root.py  test_users_router.py
